# Access-COM

./: .gitignore  .windsurfrules  MSysObjects.csv  README.md  README_COM.md  access_com.py  find_windsurf_logs.py  pyproject.toml  requirements.txt  summary.txt  test_access_com.py
